// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flow batch | {} 1`] = `
"export async function __main(__args) {
  //=== start@start | {level:1,blockIndex:0}
  const start = {}
  start.outputs = {
    nums: [1, 2, 3],
    sum: 0,
  }
  Object.assign(start.outputs, __args)
  //=== batch@batch | {level:1,blockIndex:1}
  const batch = {}
  batch.outputs = {}
  batch.localVariables = {
    item: 0,
    index: 0,
  }
  // concurrency: 3
  batch.__array = start.outputs.nums
  batch.__array.forEach((__item, __index) => {
    batch.localVariables.item = __item
    batch.localVariables.index = __index
    //=== assign_sum@variable | {level:2,blockIndex:0,parent:'batch'}
    const assign_sum = {}
    assign_sum.outputs = {}
    start.outputs.sum = start.outputs.sum + batch.localVariables.item
  }) // batch@batch
  //=== end@end | {level:1,blockIndex:2}
  const end = {}
  end.data = {
    sum: start.outputs.sum,
  }
  return end.data
}
"
`;

exports[`flow batch | {} 2`] = `
{
  "error": {
    "code": "",
    "msg": "",
  },
  "sum": 6,
}
`;

exports[`flow batch | {nums:[]} 1`] = `
"export async function __main(__args) {
  //=== start@start | {level:1,blockIndex:0}
  const start = {}
  start.outputs = {
    nums: [1, 2, 3],
    sum: 0,
  }
  Object.assign(start.outputs, __args)
  //=== batch@batch | {level:1,blockIndex:1}
  const batch = {}
  batch.outputs = {}
  batch.localVariables = {
    item: 0,
    index: 0,
  }
  // concurrency: 3
  batch.__array = start.outputs.nums
  batch.__array.forEach((__item, __index) => {
    batch.localVariables.item = __item
    batch.localVariables.index = __index
    //=== assign_sum@variable | {level:2,blockIndex:0,parent:'batch'}
    const assign_sum = {}
    assign_sum.outputs = {}
    start.outputs.sum = start.outputs.sum + batch.localVariables.item
  }) // batch@batch
  //=== end@end | {level:1,blockIndex:2}
  const end = {}
  end.data = {
    sum: start.outputs.sum,
  }
  return end.data
}
"
`;

exports[`flow batch | {nums:[]} 2`] = `
{
  "error": {
    "code": "",
    "msg": "",
  },
  "sum": 0,
}
`;

exports[`flow batch | {nums:[-3,-2,-1,1,2,3]} 1`] = `
"export async function __main(__args) {
  //=== start@start | {level:1,blockIndex:0}
  const start = {}
  start.outputs = {
    nums: [1, 2, 3],
    sum: 0,
  }
  Object.assign(start.outputs, __args)
  //=== batch@batch | {level:1,blockIndex:1}
  const batch = {}
  batch.outputs = {}
  batch.localVariables = {
    item: 0,
    index: 0,
  }
  // concurrency: 3
  batch.__array = start.outputs.nums
  batch.__array.forEach((__item, __index) => {
    batch.localVariables.item = __item
    batch.localVariables.index = __index
    //=== assign_sum@variable | {level:2,blockIndex:0,parent:'batch'}
    const assign_sum = {}
    assign_sum.outputs = {}
    start.outputs.sum = start.outputs.sum + batch.localVariables.item
  }) // batch@batch
  //=== end@end | {level:1,blockIndex:2}
  const end = {}
  end.data = {
    sum: start.outputs.sum,
  }
  return end.data
}
"
`;

exports[`flow batch | {nums:[-3,-2,-1,1,2,3]} 2`] = `
{
  "error": {
    "code": "",
    "msg": "",
  },
  "sum": 0,
}
`;

exports[`flow batch_outputs | {} 1`] = `
"export async function __main(__args) {
  //=== start@start | {level:1,blockIndex:0}
  const start = {}
  start.outputs = {}
  Object.assign(start.outputs, __args)
  //=== batch@batch | {level:1,blockIndex:1}
  const batch = {}
  batch.outputs = {
    sum: 0,
  }
  batch.localVariables = {
    item: 0,
    index: 0,
  }
  // concurrency: 1
  batch.__array = [1, 2, 3, 4, 5]
  batch.__array.forEach((__item, __index) => {
    batch.localVariables.item = __item
    batch.localVariables.index = __index
    //=== variable@variable | {level:2,blockIndex:0,parent:'batch'}
    const variable = {}
    variable.outputs = {}
    batch.outputs.sum = batch.outputs.sum + batch.localVariables.item
  }) // batch@batch
  //=== end@end | {level:1,blockIndex:2}
  const end = {}
  end.data = {
    res: batch.outputs.sum,
  }
  return end.data
}
"
`;

exports[`flow batch_outputs | {} 2`] = `
{
  "error": {
    "code": "",
    "msg": "",
  },
  "res": 15,
}
`;
